# parsec

./: .hgignore  ProjectHome.md  README  stack.xml
acceleration_limits_calibration/: manifest.xml
arduino_parsec/: arduino_parsec.pde
cmd_vel_safety_filter/: CMakeLists.txt  mainpage.dox  manifest.xml
display_parsec_time_offsets/: mainpage.dox  manifest.xml
explore_demo/: CMakeLists.txt  mainpage.dox  manifest.xml
floor_filter/: CMakeLists.txt  manifest.xml
gmapping_offline/: CMakeLists.txt  mainpage.dox  manifest.xml
gmapping_offline/include/gmapping_offline/: gmapping_offline.h
gmapping_offline/launch/: gmapping.launch
gmapping_offline/src/: gmapping_offline.cpp
interactive_waypoint_markers/: mainpage.dox  manifest.xml
laser_signal_filter/: CMakeLists.txt  mainpage.dox  manifest.xml
lightweight_navigation_visualization/: CMakeLists.txt  mainpage.dox  manifest.xml
map_to_compressed_image/: mainpage.dox  manifest.xml
nav_waypoints_server/: CMakeLists.txt  mainpage.dox  manifest.xml
navigation_waypoints_server/: CMakeLists.txt  mainpage.dox  manifest.xml
parsec_arduino/: CMakeLists.txt  README  mainpage.dox  manifest.xml
parsec_arduino_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
parsec_bringup/: manifest.xml  robot.launch
parsec_calibration/: mainpage.dox  manifest.xml
parsec_dashboard/: CMakeLists.txt  README  mainpage.dox  manifest.xml
parsec_description/: mainpage.dox  manifest.xml
parsec_msgs/: mainpage.dox  manifest.xml
parsec_navigation/: amcl_nav.launch  amcl_navigation.launch  gmapping_nav.launch  gmapping_navigation.launch  mainpage.dox  manifest.xml  parsec_nav_rviz.vcg
parsec_odometry/: CMakeLists.txt  mainpage.dox  manifest.xml
parsec_odometry_relay/: mainpage.dox  manifest.xml
parsec_perception/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  nodelets.xml
parsec_perception/include/parsec_perception/: circular_robot_self_filter.h  floor_filter.h  floor_filter_nodelet.h  geometry.h  laser_to_pointcloud_converter.h
parsec_perception/src/: circular_robot_self_filter.cpp  floor_filter.cpp  floor_filter_nodelet.cpp  geometry.cpp  laser_to_pointcloud_converter.cpp
parsec_perception/test/: floor_filter_test.cpp  geometry_test.cpp
parsec_pinger/: CMakeLists.txt  mainpage.dox  manifest.xml
parsec_simulation_stage/: mainpage.dox  manifest.xml
priority_mux/: CMakeLists.txt  mainpage.dox  manifest.xml
priority_mux_msgs/: mainpage.dox  manifest.xml
rcconsole/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
rcconsole/include/rcconsole/: exclude_message_filter.h  exclude_name_filter.h  include_message_filter.h  include_name_filter.h  log_file_printer.h  log_filter.h  log_stream_printer.h  logger.h  rcconsole.h
rcconsole/src/: exclude_message_filter.cpp  exclude_name_filter.cpp  include_message_filter.cpp  include_name_filter.cpp  log_file_printer.cpp  log_filter.cpp  log_stream_printer.cpp  logger.cpp  rcconsole.cpp  rcconsole_node.cpp  set_logger_level.cpp
rcconsole/test/: rcconsole_test.cpp
(+219 files in other folders)
